--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         <div class="playerOne">
             <h3>Your Score: </h3><br>
             <h4><span class="overallScore1"></span></h4>
+            <p><span id="acc1"></span></p>
              <p><span id="entries1"></span></p>
-             <p><span></span></p>
+             <p><span id="lost"></span></p>
              <img src="img/die-button.jpg" id="roll-1" alt="die">
             &emsp;<button type="submit" class="btn" id="hold-1">Hold</button>
         </div>
@@ -58,6 +59,7 @@
     <div class="playerTwo">
         <h3>Your Score: </h3><br>
         <h4><span class="overallScore2"></span></h4>
+        <p><span id="acc2"></span></p>
         <p><span id="entries2"></span></p>
         <img src="img/die-button.jpg" id="roll-2" alt="die">
         &emsp;<button class="btn" id="hold-2" type="submit">Hold</button>
