--- a/index.html
+++ b/index.html
@@ -67,5 +67,10 @@
 </div>
 </div>
 </div>
+<div class="ending">
+        <h3>Oink!</h3>
+        <h4 class="winner"></h4>
+    
+</div>
 </body>
 </html>
